feat: turn MPEA literature data into an inspectable pipeline
